# biodiffusion

./: .gitignore  LICENSE  README.md  pyproject.toml
src/biodiffusion/: grid.py
src/biodiffusion_pkg/: __init__.py  grid.py
tests/: test_grid.py
