[project]
name = "biodiffusion"
version = "0.1.0"
description = "Simulation stochastique de diffusion moléculaire en 2D"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Constantin Deumier", email = "ton.email@exemple.com"}
]
dependencies = [
    "numpy>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]
