[project]
name = "biodiffusion_pkg"
version = "0.1.0"
description = "Simulation stochastique de diffusion moléculaire en 2D"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Constantin Deumier", email = "ton.email@exemple.com"}
]
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biodiffusion_pkg"]

